# rendy-tutorial

./: CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md
book/: book.toml
book/src/: 01-00-getting-started.md  01-01-project-setup.md  01-02-open-a-window.md  01-03-working-with-backends.md  01-04-vertex-data.md  01-05-shader-definition.md  01-06-pipeline-descriptors.md  SUMMARY.md
examples/01-getting-started/: main.rs
examples/01-getting-started/shaders/: vert.glsl
