[package]
name = "rendy-tutorial"
version = "0.1.0"
authors = ["Mac O'Brien <cormac@c-obrien.org>"]
edition = "2018"

[features]
default = []
dx12 = ["rendy/dx12"]
metal = ["rendy/metal"]
vulkan = ["rendy/vulkan"]

[dependencies]
log = "0.4.0"
env_logger = "0.6.1"
failure = "0.1.5"
gfx-hal = "0.2"
lazy_static = "1.3"
rendy = "0.3.1"
